--- a/particles-background-using-particles-js/index.html
+++ b/particles-background-using-particles-js/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Particles background using Particles.js</title>
+  <title>we transfert</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -27,8 +27,8 @@
     <div class="row">
       <div class=" formulaire col-sm-12 col-md-6 col-lg-6">
         <form class="form-signin text-center">
-        <input class="btn" type="file"><img src="img/plus.png" alt=""/ class="plus">
-        <label>AJOUTER UN FICHIER</label>
+        <input   type="file" class="btn">
+        <!-- <label>AJOUTER UN FICHIER</label> -->
         <input type="email" id="input" class="form-control" placeholder="à" required autofocus><br>
         <input type="email" id="input" class="form-control" placeholder="Votre email" required><br>
         <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Message..." rows="3"></textarea><br>
